Wireframe is not visible on square planes with 16384 quads #80681

Closed
opened 2020-09-11 06:33:21 +02:00 by vicbay · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-10 21:32, hash: 8ff397b3b1
Worked: 2.83.6 and 2.90

Short description of error
Wireframe is not visible on square planes with 16384 quads (128x128), both in edit and object mode.

Exact steps for others to reproduce the error
Launch blender.

  1. Add a plane.
  2. Get into edit mode.
  3. Subdivide the plane until it gets 16384 quads. You may notice that wireframe disappears at this point.
  4. Switch to face select, delete random quad and wireframe will appear.
  5. Fill the hole with new quad and wireframe disappears again., as soon as topology is back to 128x128 quads.

16384 quads plane.blend 16384 bug demo.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-10 21:32, hash: `8ff397b3b1` Worked: 2.83.6 and 2.90 **Short description of error** Wireframe is not visible on square planes with 16384 quads (128x128), both in edit and object mode. **Exact steps for others to reproduce the error** Launch blender. 1. Add a plane. 2. Get into edit mode. 3. Subdivide the plane until it gets 16384 quads. You may notice that wireframe disappears at this point. 4. Switch to face select, delete random quad and wireframe will appear. 5. Fill the hole with new quad and wireframe disappears again., as soon as topology is back to 128x128 quads. [16384 quads plane.blend](https://archive.blender.org/developer/F8864165/16384_quads_plane.blend) [16384 bug demo.mp4](https://archive.blender.org/developer/F8864176/16384_bug_demo.mp4)
Author

Added subscriber: @vicbay

Added subscriber: @vicbay

#80803 was marked as duplicate of this issue

#80803 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
--debug-gpu does not reveal any problems.


Operating system: Windows-10-10.0.18941 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.19.02 27.20.1019.2002

I can confirm. `--debug-gpu` does not reveal any problems. ---- **Operating system:** Windows-10-10.0.18941 64 Bits **Graphics card:** Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.19.02 27.20.1019.2002

This issue was referenced by cd849076d2

This issue was referenced by cd849076d2bc61a077a2ef072a0f2eac258ff822

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-09-15 14:56:30 +02:00
Member
Added subscribers: @KrzysztofKowalczyk, @fclem, @Jeroen-Bakker, @lichtwerk
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80681
No description provided.