Fix T80681 Wireframe is not visible on square planes with 16384 quads

Fix wrong logic.